--- a/Platzi_web_reload/Views/Home/Index.cshtml
+++ b/Platzi_web_reload/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Venga le digo</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>vamos a seguir aprendiendo cositas :D</p>
+
+
 </div>
